refactor: renamed controller files + connected to Angular frontend
